# llm-tg-bot-start

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
.cursor/rules/: conventions.mdc  workflow.mdc
doc/: deploy_guide.md  product_idea.md  tasklist.md  vision.md
doc/guides/: railway_deployment.md  telegram_bot_setup.md
src/: __init__.py  config.py  handlers.py  llm_client.py  logging_config.py  system_prompt.md
tests/: __init__.py  test_config.py  test_handlers.py  test_llm_client.py
